--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,7 @@ edition = "2021"
 
 [dependencies]
 indicatif = "0.17.7"
+reqwest = "0.11.23"
 rug = "1.22.0"
+termimad = "0.27.0"
+tokio = { version = "1.35.1", features = ["full"] }
