--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ path = "src/factorial/main.rs"
 
 [dependencies]
 indicatif = "0.17.7"
+primal = "0.3.2"
 reqwest = "0.11.23"
 rug = "1.22.0"
 termimad = "0.27.0"
